# oxicuda

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  audit.toml  publish_one.sh
crates/oxicuda/: Cargo.toml  README.md  TODO.md
crates/oxicuda-autotune/: Cargo.toml  README.md  TODO.md
crates/oxicuda-autotune/src/: adaptive.rs  bayesian.rs  benchmark.rs  cli.rs  config.rs  db_migration.rs  dispatch.rs  distributed.rs  early_stopping.rs  error.rs  export.rs  genetic.rs  guided_ptx.rs  incremental.rs  interpolation.rs  kernel_similarity.rs  lib.rs  memory_constrained.rs  multi_objective.rs  parallel_bench.rs  power_aware.rs  ptx_integration.rs  result_db.rs  search_space.rs  simulated_annealing.rs  transfer_learning.rs  tunable.rs  visualization.rs
crates/oxicuda-backend/: Cargo.toml  README.md
crates/oxicuda-backend/src/: lib.rs
crates/oxicuda-blas/: Cargo.toml  README.md  TODO.md
crates/oxicuda-blas/src/: algorithm_selection.rs  complex_gemm.rs  error.rs  handle.rs  lib.rs  test_matrices.rs  types.rs
crates/oxicuda-dist-infer/: Cargo.toml  README.md
crates/oxicuda-dist-infer/src/: error.rs  handle.rs  lib.rs  ptx_kernels.rs
crates/oxicuda-dnn/: Cargo.toml  README.md  TODO.md
crates/oxicuda-dnn/src/: dynamic_batch.rs  error.rs  handle.rs  lib.rs  ptx_helpers.rs  tensor_util.rs  types.rs
crates/oxicuda-driver/: Cargo.toml  README.md  TODO.md
crates/oxicuda-driver/benches/: occupancy.rs
crates/oxicuda-driver/examples/: device_info.rs  jit_logging.rs  vector_add.rs
crates/oxicuda-driver/src/: context.rs  context_config.rs  cooperative_launch.rs  debug.rs  device.rs  error.rs  event.rs  ffi.rs  ffi_constants.rs  ffi_descriptors.rs  ffi_launch.rs  function_attr.rs  graph.rs  lib.rs  link.rs  loader.rs  memory_info.rs  module.rs  multi_gpu.rs  nvlink_topology.rs  occupancy.rs  occupancy_ext.rs  primary_context.rs  profiler.rs  stream.rs  stream_ordered_alloc.rs  tma.rs
crates/oxicuda-driver/tests/: device_attrs.rs
crates/oxicuda-fft/: Cargo.toml  README.md  TODO.md
crates/oxicuda-fft/src/: callbacks.rs  conv_fft.rs  error.rs  execute.rs  half_precision.rs  inverse_scaling.rs  lib.rs  multi_gpu.rs  out_of_core.rs  plan.rs  pruned.rs  ptx_helpers.rs  types.rs
crates/oxicuda-graph/: Cargo.toml  README.md
crates/oxicuda-graph/benches/: graph_build.rs
crates/oxicuda-graph/src/: builder.rs  error.rs  graph.rs  lib.rs  node.rs
crates/oxicuda-infer/: Cargo.toml  README.md
crates/oxicuda-infer/benches/: infer_engine.rs
crates/oxicuda-infer/src/: error.rs  handle.rs  lib.rs  ptx_kernels.rs
crates/oxicuda-launch/: Cargo.toml  README.md  TODO.md
crates/oxicuda-launch/src/: arg_serialize.rs  async_launch.rs  cluster.rs  cooperative.rs  dynamic_parallelism.rs  error.rs  graph_launch.rs  grid.rs  kernel.rs  lib.rs  macros.rs  multi_stream.rs  named_args.rs  params.rs  telemetry.rs  trace.rs
crates/oxicuda-levelzero/: Cargo.toml  README.md  TODO.md
crates/oxicuda-levelzero/src/: backend.rs  device.rs  error.rs  lib.rs  memory.rs  multi_tile.rs  spirv.rs  spirv_nn.rs  spirv_subgroup.rs  spirv_xmx.rs
crates/oxicuda-lm/: Cargo.toml  README.md
crates/oxicuda-lm/benches/: lm_inference.rs
crates/oxicuda-lm/src/: config.rs  error.rs  handle.rs  lib.rs  ptx_kernels.rs  weights.rs
crates/oxicuda-memory/: Cargo.toml  README.md  TODO.md
crates/oxicuda-memory/benches/: bandwidth_copy.rs
crates/oxicuda-memory/src/: aligned.rs  bandwidth_profiler.rs  buffer_view.rs  copy.rs  copy_2d3d.rs  device_buffer.rs  host_buffer.rs  host_registered.rs  lib.rs  managed_hints.rs  memory_info.rs  peer_copy.rs  pool.rs  pool_stats.rs  unified.rs  virtual_memory.rs  zero_copy.rs
crates/oxicuda-metal/: Cargo.toml  README.md  TODO.md
crates/oxicuda-metal/src/: ane.rs  backend.rs  device.rs  error.rs  fft.rs  lib.rs  memory.rs  mps.rs  msl.rs  pipeline.rs
crates/oxicuda-primitives/: Cargo.toml  README.md
crates/oxicuda-primitives/src/: error.rs  handle.rs  lib.rs  ptx_helpers.rs
crates/oxicuda-ptx/: Cargo.toml  README.md  TODO.md
crates/oxicuda-ptx/src/: arch.rs  cache.rs  error.rs  lib.rs  profile_guided.rs  tui_explorer.rs
crates/oxicuda-quant/: Cargo.toml  README.md
crates/oxicuda-quant/benches/: quant_ops.rs
crates/oxicuda-quant/src/: error.rs  lib.rs  ptx_kernels.rs
crates/oxicuda-rand/: Cargo.toml  README.md  TODO.md
crates/oxicuda-rand/src/: error.rs  generator.rs  graph_gen.rs  host_api.rs  lib.rs  matrix_gen.rs  monte_carlo.rs  statistical_tests.rs
crates/oxicuda-rl/: Cargo.toml  README.md
crates/oxicuda-rl/src/: error.rs  handle.rs  lib.rs  ptx_kernels.rs
crates/oxicuda-rocm/: Cargo.toml  README.md  TODO.md
crates/oxicuda-rocm/src/: backend.rs  device.rs  error.rs  hip_kernels.rs  hipblas.rs  hiprtc.rs  lib.rs  memory.rs  multi_device.rs
crates/oxicuda-runtime/: Cargo.toml  README.md
crates/oxicuda-runtime/benches/: runtime_ops.rs
crates/oxicuda-runtime/examples/: check_gpu.rs
crates/oxicuda-runtime/src/: device.rs  error.rs  event.rs  launch.rs  lib.rs  memory.rs  peer.rs  profiler.rs  stream.rs  texture.rs
crates/oxicuda-signal/: Cargo.toml  README.md
crates/oxicuda-signal/src/: error.rs  handle.rs  lib.rs  ptx_helpers.rs  types.rs  window.rs
crates/oxicuda-solver/: Cargo.toml  README.md  TODO.md
crates/oxicuda-solver/src/: error.rs  handle.rs  lib.rs  ptx_helpers.rs
crates/oxicuda-sparse/: Cargo.toml  README.md  TODO.md
crates/oxicuda-sparse/src/: error.rs  handle.rs  lib.rs  ptx_helpers.rs
crates/oxicuda-train/: Cargo.toml  README.md
crates/oxicuda-train/benches/: train_ops.rs
crates/oxicuda-train/src/: amp.rs  checkpoint.rs  ema.rs  error.rs  grad_accum.rs  grad_clip.rs  handle.rs  lib.rs  lr_scheduler.rs  ptx_kernels.rs  zero.rs
crates/oxicuda-vulkan/: Cargo.toml  README.md  TODO.md
crates/oxicuda-vulkan/src/: async_compute.rs  backend.rs  command.rs  device.rs  error.rs  lib.rs  memory.rs  pipeline.rs  spirv.rs  spirv_subgroup.rs
crates/oxicuda-webgpu/: Cargo.toml  README.md  TODO.md
crates/oxicuda-webgpu/src/: backend.rs  device.rs  error.rs  lib.rs  memory.rs  shader.rs  (+1 more)
(+517 files in other folders)
