[package]
name         = "oxicuda-dist-infer"
description  = "Distributed GPU inference for OxiCUDA: tensor parallelism, sequence parallelism, expert parallelism, distributed KV cache, and affinity-aware request routing."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme                 = "README.md"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
