[package]
name = "oxicuda-fft"
description = "OxiCUDA FFT - GPU-accelerated FFT operations (cuFFT equivalent)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["cuda", "fft", "gpu", "signal-processing", "fourier"]
categories = ["mathematics", "science", "hardware-support"]

[dependencies]
oxicuda-driver.workspace = true
oxicuda-memory.workspace = true
oxicuda-launch.workspace = true
oxicuda-ptx.workspace = true
oxicuda-blas.workspace = true
num-complex.workspace = true
thiserror.workspace = true

[features]
f16 = ["dep:half", "oxicuda-blas/f16"]

[dependencies.half]
workspace = true
optional = true

[lints]
workspace = true
