[package]
name = "oxicuda-launch"
description = "OxiCUDA Launch - Type-safe GPU kernel launch infrastructure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["cuda", "gpu", "kernel", "launch", "compute"]
categories = ["hardware-support"]

[dependencies]
oxicuda-driver.workspace = true
oxicuda-memory.workspace = true
oxicuda-ptx.workspace = true
tracing = { workspace = true, optional = true }

[features]
default = []
gpu-tests = ["oxicuda-driver/gpu-tests"]
tracing = ["dep:tracing"]

[lints]
workspace = true
