[package]
name         = "oxicuda-lm"
description  = "Large language model inference primitives for OxiCUDA: BPE tokenizer, transformer layers with KV cache, GPT-2 and LLaMA architectures — pure Rust, zero CUDA SDK dependency."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme                 = "README.md"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "lm_inference"
harness = false
