[package]
name = "oxicuda-rand"
description = "OxiCUDA Rand - GPU-accelerated random number generation (cuRAND equivalent)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["cuda", "random", "gpu", "rng", "monte-carlo"]
categories = ["algorithms", "science", "hardware-support"]

[dependencies]
oxicuda-driver.workspace = true
oxicuda-memory.workspace = true
oxicuda-launch.workspace = true
oxicuda-ptx.workspace = true
thiserror.workspace = true
half = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[features]
default = []
full = ["f16", "serde"]
f16 = ["dep:half"]
serde = ["dep:serde"]
gpu-tests = []

[lints]
workspace = true
