[package]
name = "oxicuda-rl"
description = "GPU-accelerated reinforcement learning primitives for OxiCUDA"
version.workspace = true
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
oxicuda-driver = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
approx = { workspace = true }

[lints]
workspace = true
