[package]
name = "oxicuda-sparse"
description = "OxiCUDA Sparse - GPU-accelerated sparse matrix operations (cuSPARSE equivalent)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["cuda", "sparse", "gpu", "matrix", "linear-algebra"]
categories = ["mathematics", "science", "hardware-support"]

[dependencies]
oxicuda-driver.workspace = true
oxicuda-memory.workspace = true
oxicuda-launch.workspace = true
oxicuda-ptx.workspace = true
oxicuda-blas.workspace = true
thiserror.workspace = true
half = { workspace = true, optional = true }

[features]
default = []
f16 = ["dep:half", "oxicuda-blas/f16"]
gpu-tests = []

[lints]
workspace = true
